feat: Add styles for main

--- a/css/style.css
+++ b/css/style.css
@@ -108,3 +108,103 @@ a{
   justify-content: space-between;
 }
 
+.main__container{
+  padding: 70px;
+  padding-top: 140px;
+  color: white;
+}
+
+.main__item{
+  margin-bottom:100px;
+}
+
+.main__title{
+  font-size: 1.7rem;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  padding-bottom: 20px;
+}
+
+.main__title i{
+  margin-right: 30px;
+}
+
+.main__title h2{
+ border-bottom: 5px solid white;
+ width: 100%;
+}
+
+.main__content{
+  font-size: 2rem;
+  text-align: justify;
+}
+
+.main__item:nth-child(2) .main__list li{
+  line-height: 4rem;
+  font-size: 2rem;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid white;
+}
+
+.main__list li i{
+  margin-right: 20px;
+}
+
+.main__item:last-child .main__list ul{
+  display: flex;
+  justify-content: space-between;
+}
+
+.main__item:last-child .main__list li{
+  align-items: center;
+  display: flex;
+  line-height: 4rem;
+}
+
+.main__item:last-child .main__list li p{
+  width: 40%;
+  font-size: 2rem;
+  margin-right: 40px;
+}
+
+.main__item:last-child .main__list li div{
+  display: flex;
+}
+
+.main__item:last-child .main__list li div div{
+  background: black;
+  width: 15px;
+  height: 15px;
+  margin-left: 20px;
+  border-radius: 50%;
+}
+
+.main__item:last-child .main__list div:first-child li:first-child div div:last-child,{
+  background: white;
+}
+
+.main__item:last-child .main__list div:first-child li:last-child div div:last-child{
+  background: white;
+}
+
+.main__item:last-child .main__list div:last-child li:first-child div div:last-child{
+  background: white;
+}
+
+.main__item:last-child .main__list div:last-child li:first-child div div:nth-child(4){
+  background: white;
+}
+
+.main__item:last-child .main__list div:last-child li:last-child div div:last-child{
+  background: white;
+}
+
+.main__item:last-child .main__list div:last-child li:last-child div div:nth-child(4){
+  background: white;
+}
+
+.main__item:last-child .main__list div:last-child li:last-child div div:nth-child(3){
+  background: white;
+}
