--- a/css/style.css
+++ b/css/style.css
@@ -217,6 +217,11 @@ a {
   padding-top: 140px;
   color: white;
 }
+@media (max-width: 550px) {
+  .content .main .main__container {
+    padding: 70px 10px;
+  }
+}
 .content .main .main__container .main__item:nth-child(2) .main__list li {
   line-height: 4rem;
   font-size: 2rem;
@@ -305,6 +310,47 @@ a {
 }
 .content .main .main__container .main__item .main__list ul li i {
   margin-right: 20px;
+}
+@media (max-width: 900px) {
+  .content .main .main__container .main__item:last-child .main__list ul {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+@media (max-width: 900px) {
+  .content .main .main__container .main__item:last-child .main__list ul li {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+}
+.content .main .main__container .main__item:last-child .main__list ul li i {
+  margin-right: 20px;
+}
+.content .main .main__container .main__item:last-child .main__list ul li div {
+  display: flex;
+  justify-content: space-between;
+}
+@media (max-width: 550px) {
+  .content .main .main__container .main__item:nth-child(2) .main__list ul {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+@media (max-width: 550px) {
+  .content .main .main__container .main__item:nth-child(2) .main__list ul li {
+    display: flex;
+    flex-direction: column;
+  }
+}
+.content .main .main__container .main__item:nth-child(2) .main__list ul li i {
+  margin-right: 20px;
+}
+@media (max-width: 550px) {
+  .content .main .main__container .main__item:nth-child(2) .main__list ul li span {
+    margin-left: 43px;
+  }
 }
 
 .footer {
