--- a/css/style.scss
+++ b/css/style.scss
@@ -235,6 +235,9 @@ a {
       padding: 70px;
       padding-top: 140px;
       color: white;
+      @include iphone{
+        padding: 70px 10px;
+      }
       .main__item:nth-child(2) .main__list li {
         line-height: 4rem;
         font-size: 2rem;
@@ -333,6 +336,59 @@ a {
               }
             }
           }
+        }
+
+        &:last-child{
+          .main__list {
+            ul{
+              @include ipad{
+                display: flex;
+                flex-wrap: wrap;
+              }
+              li{
+                @include ipad{
+                  width: 100%;
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: space-between;
+                }
+                i{
+                  margin-right: 20px;
+                }
+                div{
+                  display: flex;
+                  justify-content: space-between;
+                }
+              }
+            }
+          }
+        }
+
+        &:nth-child(2){
+          .main__list {
+            ul{
+              @include iphone{
+                
+                display: flex;
+                flex-wrap: wrap;
+              }
+              li{
+                @include iphone{
+                  display: flex;
+                  flex-direction: column;
+                }
+                i{
+                  margin-right: 20px;
+                }
+                span{
+                  @include iphone{
+                    margin-left: 43px;
+                  }
+                }
+              }
+            }
+          }
+        
         }
       }
     }
