--- a/css/style.css
+++ b/css/style.css
@@ -311,6 +311,11 @@ a {
 .content .main .main__container .main__item .main__list ul li i {
   margin-right: 20px;
 }
+.content .main .main__container .main__item:nth-child(3) code {
+  background: transparent;
+  color: white;
+  font-size: 1.2rem;
+}
 @media (max-width: 900px) {
   .content .main .main__container .main__item:last-child .main__list ul {
     display: flex;
